# hs-curriculum

./: ChangeLog.md  LICENSE  README.md  default.nix  exercise-1.md  exercise-2.md  exercise-3.md  hs-curriculum.cabal
nix/: pkgs.nix
src/: Critter.hs  Critter2.hs  Ex4.hs  Introlude.hs  Magic.hs
src/LoH/: Game.hs  GuessMe.hs
src/Magic/: LandCalc.hs
